syntax = "proto3";

package userservice;

service UserService {
  rpc ValidateUser (UserRequest) returns (UserResponse);
  rpc GetFollowerIds (GetFollowersRequest) returns (GetFollowersResponse);
  rpc CheckUserAndFollower (UserFollowerRequest) returns (UserFollowerResponse);
  rpc IsUserValid (IsUserValidRequest) returns (IsUserValidResponse);
}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  bool is_valid = 1;
  string user_name = 2;
  string avatar = 3;
}

message GetFollowersRequest {
  int32 user_id = 1;
}

message GetFollowersResponse {
  repeated int32 follower_ids = 1;
}

message UserFollowerRequest {
  int32 user_id = 1;
  int32 browsing_user_id = 2;
}

message UserFollowerResponse {
  bool is_existed = 1;
  bool is_follower = 2;
}

message IsUserValidRequest {
  int32 user_id = 1;
}

message IsUserValidResponse {
  bool is_valid = 1;
}